k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${POD_NAME}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${POD_NAME}
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: ${POD_NAME}
    spec:
      containers:
        - name: ${POD_NAME}
          image: ${GAR_LOCATION}-docker.pkg.dev/${PROJECT_ID}/${REPOSITORY}/${IMAGE}:${TAG}
          ports:
            - containerPort: 80
          volumeMounts:
            - name: env
              mountPath: /app/.env
              subPath: .env
              readOnly: true
      volumes:
        - name: env
          secret:
            secretName: env
      restartPolicy: Always
