k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ${SERVICE}
  name: ${SERVICE}
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: ${SERVICE}
